--- a/go-root/wasm/index.html
+++ b/go-root/wasm/index.html
@@ -1,16 +1,17 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <script src="wasm_exec.js"></script>
+    <meta charset="utf-8">
+    <title>Go WASM Example</title>
+    <script src="wasm_exec.js"></script> <!-- Required runtime from Go -->
     <script>
         const go = new Go();
-        WebAssembly.instantiateStreaming(
-            fetch("main.wasm"),
-            go.importObject
-        ).then(result => {
+        WebAssembly.instantiateStreaming(fetch("main.wasm"), go.importObject).then((result) => {
             go.run(result.instance);
         });
     </script>
 </head>
-<body></body>
+<body>
+<h1>Go WASM Running</h1>
+</body>
 </html>
